# AxiomTrace

./: .gitignore  CMakeLists.txt  DRV8870驱动开发与审查文档.md  README.md  README_zh.md  axiomtrace_amalgamated.h
.codebuddy/plans/: MSPM0G3507-严格五层架构设计_7eaacdc4.md  MSPM0G3507-工程架构设计_2b61906d(未完成).md  code-review-fix-v2_b7d018d0.md  code-review-fix_8fcfc92c(未完成).md  encoder-t-method-speed_2e770b6f(未完成).md  encoder-t-method_6caf55e4(未完成).md  encoder-t-method_d79cbb53.md  fix-encoding-and-rpm-waveform_ecb01114.md  fix-uart-irq-handler_2764b346.md  menu-print-once_f081556e.md  menu-state-machine_f89fdc93.md  restore-control-task_02a7d713(未完成).md
.githooks/: check_doc_links.py  pre-push
.github/workflows/: build-mspm0-configurator.yml  ci.yml
MSPM0G3507_FreeRTOS/: FreeRTOSConfig.h  README.md  board.c  board.h  empty.syscfg  main.c  ti_msp_dl_config.c  ti_msp_dl_config.h
MSPM0G3507_FreeRTOS/App/: app_complementary_filter.c  app_complementary_filter.h  app_debug.c  app_debug.h  app_main.c  app_main.h  app_model_id.c  app_model_id.h  app_pid.c  app_pid.h  app_vofa.c  app_vofa.h  test_uart_dma.c  test_uart_dma.h
MSPM0G3507_FreeRTOS/Application/: app_debug.c  app_main.c  app_main.h  app_vofa.c  app_vofa.h
MSPM0G3507_FreeRTOS/BSP/: _bsp_template.c  _bsp_template.h  bsp_adc.c  bsp_adc.h  bsp_common.h  bsp_encoder.c  bsp_encoder.h  bsp_led.c  bsp_motor.c  bsp_motor.h  bsp_mpu6050.c  bsp_mpu6050.h  bsp_mpu6050_dmp.c  bsp_mpu6050_dmp.h  bsp_soft_i2c.c  bsp_soft_i2c.h  bsp_timer.c  bsp_uart.c  bsp_uart.h  log.h
MSPM0G3507_FreeRTOS/Config/: FreeRTOSConfig.h  empty.syscfg  project_config.h  project_version.h  ti_msp_dl_config.c
MSPM0G3507_FreeRTOS/Docs/: DRV8870综合技术审查与安全重构方案.md  GUI配置软件使用说明_v0.1.0.md  README.md  公共接口参考_v0.1.0.md  外设分类开发参考手册.md  架构与重构报告_v0.1.0.md  电机驱动双后端分层与切换指南.md  通信协议_v1.md
MSPM0G3507_FreeRTOS/Filter/: filter_complementary.c  filter_internal.h  filter_mahony.c
MSPM0G3507_FreeRTOS/HAL/: _hal_template.c  hal_common.h  hal_gpio.c  hal_gpio.h  hal_timer.c  hal_uart.c  hal_uart.h
MSPM0G3507_FreeRTOS/OSAL/: osal_api.h  osal_critical.c  osal_delay.c  osal_task.c
MSPM0G3507_FreeRTOS/docs/: README.md  architecture.md  changelog.md  development_guide.md  hardware_setup.md  menu_guide.md  pid_controller.md  pin_assignment.md  troubleshooting.md  vofa_protocol.md
MSPM0G3507_FreeRTOS/keil/: JLinkLog.txt  JLinkSettings.ini  build_log.txt  empty_LP_MSPM0G3507_nortos_keil.map  empty_LP_MSPM0G3507_nortos_keil.uvguix.59745  empty_LP_MSPM0G3507_nortos_keil.uvoptx  empty_LP_MSPM0G3507_nortos_keil.uvprojx
MSPM0G3507_FreeRTOS/lib/: dmp_firmware.h
MSPM0G3507_FreeRTOS/port/: axiom_port_mspm0.c
MSPM0G3507_Project/: Makefile  README.md
MSPM0G3507_Project/docs/: architecture.md  bsp_driver_examples.md
MSPM0G3507_Project/freertos/: FreeRTOSConfig.h
MSPM0G3507_Project/linker/: mspm0g3507.ld
MSPM0G3507_Project/startup/: startup_mspm0g3507.c
baremetal/: axiom_config.h  axiomtrace.h
baremetal/backend/: axiom_backend.c  axiom_backend.h  axiom_backend_deferred.c  axiom_backend_deferred.h  axiom_backend_memory.c
baremetal/core/: axiom_crc.h  (+16 more)
cmake/: AxiomTraceConfig.cmake.in  AxiomTracePresets.cmake  AxiomTraceTools.cmake
firmware/: README.md
firmware/MSPM0G3507_Project/MSPM0G3507_FreeRTOS/Application/Tests/host/: CMakeLists.txt  test_algorithms.c
firmware/MSPM0G3507_Project/MSPM0G3507_FreeRTOS/Application/Tests/host/support/: bsp_mathacl.h  mathacl_matrix.h
firmware/MSPM0G3507_Project/tools/mspm0_configurator/: README.md  build_release.py  pyproject.toml
firmware/MSPM0G3507_Project/tools/mspm0_configurator/src/mspm0_configurator/: __init__.py  __main__.py  app.py  i18n.py  icons.py  main_window.py  plot_widget.py  protocol.py  serial_worker.py  settings.py  theme.py
firmware/MSPM0G3507_Project/tools/mspm0_configurator/tests/: test_main_window.py  test_plot_widget.py  test_protocol.py  test_serial_worker.py  test_settings.py
scripts/: benchmark_gate.py  ci.sh  clean.sh  release_checks.py  resource_report.py
spec/: api_reference.md  api_reference_zh.md  backend_contract.md  backend_contract_zh.md  decoder_protocol.md  decoder_protocol_zh.md  event_dictionary.md  event_dictionary_zh.md  event_model.md  event_model_zh.md  fault_capsule.md  fault_capsule_zh.md  minimalist_architecture_analysis.md  minimalist_architecture_analysis_zh.md  static_analysis.md  static_analysis_zh.md  toolchain_ecosystem_design.md  toolchain_ecosystem_design_zh.md  versioning.md  versioning_zh.md  wire_format.md  wire_format_zh.md
tests/: test_integration.sh  test_python_tools.py  test_release_scripts.py
tests/cmake/bundle_fixture/: CMakeLists.txt  emitter_a.c  emitter_b.c  events.json  main.c
tests/consumer/add_subdirectory/: CMakeLists.txt
tests/host/: CMakeLists.txt  generate_golden.c  single_header_consumer_a.c  single_header_consumer_b.c  single_header_custom_impl.c  single_header_custom_port.c  single_header_impl.c  single_header_main.c  test_backend_deferred.c  test_backend_ext.c  test_backend_memory.c  test_benchmark.c  test_capsule.c  test_config_presets.c  test_core_overwrite.c  test_crc.c  test_dynamic_call_chain.c  test_encoder.c  test_event.c  test_event_ext.c  test_example_e2e.py  test_filter.c  test_frontend_overflow.c  test_helpers.h  test_location.c  test_profiles.c  test_ring_ext.c  test_selftest.c  test_timestamp.c
tool/: pyproject.toml
tool/decoder/: axiom_decoder.py
tool/golden/: dictionary.json  update_golden.py
tool/golden/expected/: frame_01_minimal.json  frame_02_u16.json  frame_03_metadata_identity.json  frame_04_location_file_id.json  frame_05_system_probe.json
tool/scripts/: amalgamate.py  check_links.py  extract_dict.py
tool/src/axiomtrace_tools/: __init__.py  bundle.py  capsule.py  cli.py  codegen.py  decoder.py  dictionary.py  extractor.py  metadata_id.py  render.py  source_map.py  validator.py
tool/src/axiomtrace_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/mspm0_configurator/: pyproject.toml
tools/mspm0_configurator/src/mspm0_configurator/: main_window.py  plot_widget.py  protocol.py  serial_worker.py
(+326 files in other folders)
