[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomtrace-tools"
version = "1.0.0"
description = "AxiomTrace binary frame decoder and tools"
readme = {text = "AxiomTrace host-side decoder and metadata bundle tools. See the project toolchain ecosystem specification for stable workflow and contracts.", content-type = "text/markdown"}
license = {text = "GPL-3.0-only"}
requires-python = ">=3.12"
authors = [
    {name = "AxiomTrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]

dependencies = ["click>=7.0"]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
test = ["pytest>=8.0"]

[project.scripts]
axiom-decoder = "axiomtrace_tools.cli:decoder_main"
axiom-codegen = "axiomtrace_tools.cli:codegen_main"
axiom-bundle = "axiomtrace_tools.cli:bundle_main"
axiom-validate = "axiomtrace_tools.cli:validate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
