[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mspm0-configurator"
version = "0.1.0"
description = "Bilingual serial configuration and telemetry GUI for MSPM0G3507 motor controller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6,<7",
  "pyserial>=3.5,<4",
]

[project.scripts]
mspm0-configurator = "mspm0_configurator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
